Adding cert tool to build

--- a/custom_builds/152/distros/20.x/pom.xml
+++ b/custom_builds/152/distros/20.x/pom.xml
@@ -123,6 +123,7 @@
                 <module>attendance</module>
                 <module>bbb-tool</module>
                 <module>blogwow</module>
+                <module>certification</module>
                 <module>rsmart</module>
             </modules>
         </profile>
