--- a/custom_builds/155/distros/20.x/pom.xml
+++ b/custom_builds/155/distros/20.x/pom.xml
@@ -124,6 +124,7 @@
                 <module>blogwow</module>
                 <module>certification</module>
                 <module>rsmart</module>
+                <module>scorm</module>
             </modules>
         </profile>
 
