Adding scorm to build

--- a/custom_builds/152/distros/20.x/pom.xml
+++ b/custom_builds/152/distros/20.x/pom.xml
@@ -125,6 +125,7 @@
                 <module>blogwow</module>
                 <module>certification</module>
                 <module>rsmart</module>
+                <module>scorm</module>
             </modules>
         </profile>
 
