--- a/custom_builds/183/distros/20.x/pom.xml
+++ b/custom_builds/183/distros/20.x/pom.xml
@@ -123,7 +123,7 @@
                 <module>attendance</module>
                 <module>blogwow</module>
                 <module>kaltura</module>
-                <!-- module>linktool</module -->
+                <module>linktool</module>
             </modules>
         </profile>
 
