Enabling 3rd party tools

--- a/custom_builds/142/distros/21.x/pom.xml
+++ b/custom_builds/142/distros/21.x/pom.xml
@@ -122,16 +122,14 @@
                 <module>webservices</module>
                 <module>wicket</module>
 		<!-- Contrib Tools -->
-<!--
                 <module>attendance</module>
                 <module>bbb-tool</module>
                 <module>blogwow</module>
                 <module>certification</module>
-                <module>irubric-core</module>
-                <module>irubric-tool</module>
+                <!-- module>irubric-core</module>
+                <module>irubric-tool</module -->
                 <module>SakaiXAPI-Provider</module>
                 <module>gradebook1</module>
--->
             </modules>
         </profile>
 
