enabling gradebook-export

--- a/custom_builds/165/distros/21.x/pom.xml
+++ b/custom_builds/165/distros/21.x/pom.xml
@@ -127,7 +127,7 @@
                 <module>clog</module>
                 <module>certification</module>
                 <module>evaluation</module>
-                <!-- module>gradebook-export</module -->
+                <module>gradebook-export</module>
                 <module>rsmart</module>
             </modules>
         </profile>
