--- a/sakai/branches/22.x-forumsnext/pom.xml
+++ b/sakai/branches/22.x-forumsnext/pom.xml
@@ -58,6 +58,7 @@
                 <module>cloud-storage</module>
                 <module>content</module>
                 <module>content-review</module>
+                <module>conversations</module>
                 <module>dashboard</module>
                 <module>dav</module>
                 <module>delegatedaccess</module>
