Adding certification to build

--- a/custom_builds/67/distros/21.x/pom.xml
+++ b/custom_builds/67/distros/21.x/pom.xml
@@ -124,6 +124,7 @@
 		<!-- Contrib Tools -->
                 <module>attendance</module>
                 <module>blogwow</module>
+                <module>certification</module>
                 <module>evaluation</module>
             </modules>
         </profile>
