Adding iclicker to build

--- a/custom_builds/68/distros/21.x/pom.xml
+++ b/custom_builds/68/distros/21.x/pom.xml
@@ -127,7 +127,7 @@
                 <module>blogwow</module>
                 <module>evaluation</module>
                 <module>gradebook1</module>
-                <!-- module>iclicker</module -->
+                <module>iclicker</module>
             </modules>
         </profile>
 
