Adding gb1 to build list

--- a/custom_builds/183/distros/20.x/pom.xml
+++ b/custom_builds/183/distros/20.x/pom.xml
@@ -123,6 +123,7 @@
                 <module>attendance</module>
                 <module>blogwow</module>
                 <module>kaltura</module>
+                <module>gradebook1</module>
                 <module>linktool</module>
             </modules>
         </profile>
