Adding SCORM tool to build

--- a/custom_builds/182/distros/21.x/pom.xml
+++ b/custom_builds/182/distros/21.x/pom.xml
@@ -125,6 +125,7 @@
                 <module>bbb-tool</module>
                 <module>blogwow</module>
                 <module>certification</module>
+                <module>scorm</module>
 		<module>sakai-wildapricot-integration</module>
             </modules>
         </profile>
