Removing gb1 from build

--- a/custom_builds/57/distros/21.x/pom.xml
+++ b/custom_builds/57/distros/21.x/pom.xml
@@ -125,7 +125,7 @@
 		<!-- Contrib Tools -->
                 <module>attendance</module>
                 <module>blogwow</module>
-                <module>gradebook</module>
+                <!--module>gradebook</module -->
                 <module>sakora-csv</module>
             </modules>
         </profile>
