Adding conversations backport to LAMP build

--- a/custom_builds/6/distros/21.x/pom.xml
+++ b/custom_builds/6/distros/21.x/pom.xml
@@ -126,6 +126,7 @@
                 <module>blogwow</module>
                 <module>certification</module>
                 <module>clog</module>
+                <module>conversations</module>
                 <module>da_evalprovider</module>
                 <module>evaluation</module>
             </modules>
