Adding SCORM to build

--- a/custom_builds/147/distros/21.x/pom.xml
+++ b/custom_builds/147/distros/21.x/pom.xml
@@ -126,6 +126,7 @@
                 <module>blogwow</module>
                 <module>evaluation</module>
                 <module>rsmart</module>
+                <module>scorm</module>
             </modules>
         </profile>
 
