Removing eval from tool

--- a/custom_builds/104/distros/21.x/pom.xml
+++ b/custom_builds/104/distros/21.x/pom.xml
@@ -124,8 +124,8 @@
                 <module>attendance</module>
                 <module>bbb-tool</module>
                 <module>blogwow</module>
+                <module>clog</module>
                 <module>certification</module>
-                <module>evaluation</module>
             </modules>
         </profile>
 
