Adding SCORM to 19 build

--- a/custom_builds/147/distros/19.x/pom.xml
+++ b/custom_builds/147/distros/19.x/pom.xml
@@ -124,7 +124,7 @@
                 <module>blogwow</module>
                 <module>evaluation</module>
                 <module>rsmart</module>
-                <!-- module>scorm</module -->
+                <module>scorm</module>
             </modules>
         </profile>
 
