--- a/sakai/branches/sakai-22.x/pom.xml
+++ b/sakai/branches/sakai-22.x/pom.xml
@@ -121,13 +121,11 @@
                 <module>webservices</module>
                 <module>wicket</module>
 		<!-- Contrib Tools -->
-<!--
 		<module>attendance</module>
                 <module>bbb-tool</module>
                 <module>blogwow</module>
-                <module>certification</module>
+                <!-- module>certification</module -->
                 <module>evaluation</module>
--->
             </modules>
         </profile>
 
