--- a/custom_builds/155/distros/22.x/pom.xml
+++ b/custom_builds/155/distros/22.x/pom.xml
@@ -123,8 +123,8 @@
 		<!-- Contrib Tools -->
 		<module>attendance</module>
                 <module>blogwow</module>
-                <!-- module>certification</module -->
-                <!-- module>rsmart</module -->
+                <module>certification</module>
+                <module>rsmart</module>
             </modules>
         </profile>
 
