Adding conversations backport

--- a/custom_builds/7/distros/21.x/pom.xml
+++ b/custom_builds/7/distros/21.x/pom.xml
@@ -124,6 +124,7 @@
                 <module>attendance</module>
                 <module>blogwow</module>
                 <module>certification</module>
+                <module>conversations</module>
                 <module>evaluation</module>
             </modules>
         </profile>
