--- a/sakai/branches/sakai-22.x/pom.xml
+++ b/sakai/branches/sakai-22.x/pom.xml
@@ -124,7 +124,7 @@
 		<module>attendance</module>
                 <module>bbb-tool</module>
                 <module>blogwow</module>
-                <!-- module>certification</module -->
+                <module>certification</module>
                 <module>evaluation</module>
             </modules>
         </profile>
