--- a/rsmart/sakai-21.x/customer/customer-int-impl/pom.xml
+++ b/rsmart/sakai-21.x/customer/customer-int-impl/pom.xml
@@ -28,6 +28,10 @@
       <artifactId>sakai-component-manager</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.sakaiproject.shortenedurl</groupId>
+      <artifactId>shortenedurl-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.sakaiproject.scheduler</groupId>
       <artifactId>scheduler-component-shared</artifactId>
       <scope>provided</scope>
@@ -45,15 +49,9 @@
           <scope>provided</scope>
       </dependency>
       <dependency>
-          <groupId>commons-httpclient</groupId>
-          <artifactId>commons-httpclient</artifactId>
-          <version>3.1</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
           <groupId>org.apache.httpcomponents</groupId>
           <artifactId>httpclient</artifactId>
-          <version>4.1</version>
+          <version>4.5.13</version>
       </dependency>
       <dependency>
           <groupId>com.jayway.jsonpath</groupId>
@@ -98,7 +96,7 @@
     <dependency>
       <groupId>javax.mail</groupId>
       <artifactId>mail</artifactId>
-      <version>1.4</version>
+      <version>1.5.0-b01</version>
     </dependency>
 <!--org.sakaiprojectsakai-email-api${sakai.version}-->
 <!--org.sakaiprojectsakai-site-api${sakai.version}-->
