re-enabling da_evalprovider

--- a/custom_builds/6/distros/22.x/pom.xml
+++ b/custom_builds/6/distros/22.x/pom.xml
@@ -126,7 +126,7 @@
                 <module>blogwow</module>
                 <module>certification</module>
                 <module>clog</module>
-                <!-- module>da_evalprovider</module -->
+                <module>da_evalprovider</module>
                 <module>evaluation</module>
             </modules>
         </profile>
