Adding meetings tool to build

--- a/custom_builds/6/distros/22.x/pom.xml
+++ b/custom_builds/6/distros/22.x/pom.xml
@@ -127,6 +127,7 @@
                 <module>certification</module>
                 <module>clog</module>
                 <module>da_evalprovider</module>
+                <module>meetings</module>
                 <module>evaluation</module>
             </modules>
         </profile>
