--- a/custom_builds/153/distros/21.x/pom.xml
+++ b/custom_builds/153/distros/21.x/pom.xml
@@ -122,6 +122,7 @@
                 <module>wicket</module>
 		<!-- Contrib Tools -->
                 <module>attendance</module>
+                <module>blogwow</module>
                 <module>clog</module>
                 <module>rsmart</module>
             </modules>
