Adding clog to build

--- a/custom_builds/181/distros/22.x/pom.xml
+++ b/custom_builds/181/distros/22.x/pom.xml
@@ -124,7 +124,7 @@
 		<module>attendance</module>
                 <module>blogwow</module>
                 <module>certification</module>
-                <!-- module>clog</module -->
+                <module>clog</module>
                 <module>evaluation</module>
             </modules>
         </profile>
