--- a/custom_builds/6/distros/22.x/pom.xml
+++ b/custom_builds/6/distros/22.x/pom.xml
@@ -129,6 +129,7 @@
                 <module>da_evalprovider</module>
                 <module>meetings</module>
                 <module>evaluation</module>
+                <module>scorm</module>
             </modules>
         </profile>
 
