Adding meetings to build

--- a/custom_builds/181/distros/22.x/pom.xml
+++ b/custom_builds/181/distros/22.x/pom.xml
@@ -126,6 +126,7 @@
                 <module>certification</module>
                 <module>clog</module>
                 <module>evaluation</module>
+                <module>meetings</module>
             </modules>
         </profile>
 
