--- a/webservices/sakai-23.x/cxf/pom.xml
+++ b/webservices/sakai-23.x/cxf/pom.xml
@@ -12,11 +12,11 @@
     <parent>
         <groupId>org.sakaiproject.webservices</groupId>
         <artifactId>webservices</artifactId>
-        <version>22-SNAPSHOT</version>
+        <version>23-SNAPSHOT</version>
     </parent>
 
     <properties>
-        <cxf.version>3.5.2</cxf.version>
+        <cxf.version>3.5.6</cxf.version>
     </properties>
 
     <dependencies>
@@ -63,10 +63,6 @@
             <artifactId>spring-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
-        </dependency>
-        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
@@ -94,14 +90,18 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.sakaiproject.common</groupId>
+            <artifactId>archive-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.userauditservice</groupId>
+            <artifactId>userauditservice-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.sakaiproject.calendar</groupId>
             <artifactId>sakai-calendar-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
-            <artifactId>sakai-syllabus-api</artifactId>
-        </dependency>
-		<dependency>
 	      	<groupId>org.sakaiproject.shortenedurl</groupId>
 	      	<artifactId>shortenedurl-api</artifactId>
 	    </dependency>
@@ -110,12 +110,12 @@
             <artifactId>sakai-assignment-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject.edu-services.gradebook</groupId>
-            <artifactId>gradebook-service-api</artifactId>
+            <groupId>org.sakaiproject.grading</groupId>
+            <artifactId>sakai-grading-api</artifactId>
         </dependency>
     <dependency>
-      <groupId>org.sakaiproject.edu-services.gradebook</groupId>
-      <artifactId>gradebook-service-hibernate</artifactId>
+            <groupId>org.sakaiproject.edu-services.sections</groupId>
+            <artifactId>sections-api</artifactId>
     </dependency>
         <dependency>
             <groupId>org.sakaiproject.msgcntr</groupId>
@@ -134,10 +134,6 @@
           <artifactId>samigo-services</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject.common</groupId>
-            <artifactId>archive-api</artifactId>
-        </dependency>
-        <dependency>
           <groupId>org.quartz-scheduler</groupId>
           <artifactId>quartz</artifactId>
         </dependency> 
@@ -152,14 +148,8 @@
             <version>${sakai.org.json.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.jumpmind.symmetric</groupId>
-            <artifactId>symmetric-csv</artifactId>
-            <version>3.0.10.1</version>
-        </dependency>
-        <dependency>
-            <groupId>xalan</groupId>
-            <artifactId>serializer</artifactId>
-            <version>2.7.1</version>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
         </dependency>
         <!-- SAK-27503 we do not want aopalliance JAR deployed in our WAR! -->
         <dependency>
@@ -171,12 +161,7 @@
         <dependency>
         	<groupId>com.thoughtworks.paranamer</groupId>
         	<artifactId>paranamer</artifactId>
-        	<version>2.6</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-        	<groupId>junit</groupId>
-        	<artifactId>junit</artifactId>
+        	<version>2.8</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -221,7 +206,11 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.sitemanage</groupId>
+            <artifactId>sakai-site-manage-api</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
