Adding SCORM to build

--- a/sakai/branches/sakai-23.x/pom.xml
+++ b/sakai/branches/sakai-23.x/pom.xml
@@ -127,6 +127,7 @@
                 <module>blogwow</module>
                 <module>certification</module>
                 <module>evaluation</module>
+                <module>scorm</module>
             </modules>
         </profile>
 
